--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "@iankibetsh/vue-streamline",
-  "version": "1.0.7",
-  "description": "Vue library for streamlining laravel backend services with @iankibet/streamline composer package",
+  "version": "1.1.1",
+  "description": "Vue library for streamlining Laravel backend services with @iankibet/streamline composer package",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "main": "dist/vue-streamline.es.js",
-  "module": "dist/vue-streamline.umd.js",
+  "main": "dist/vue-streamline.cjs.js",
+  "module": "dist/vue-streamline.es.js",
+  "exports": {
+    ".": {
+      "require": "./dist/vue-streamline.cjs.js",
+      "import": "./dist/vue-streamline.es.js"
+    }
+  },
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "Iankibet",
   "license": "ISC",
   "peerDependencies": {
+    "vue": "^3.2.4"
   },
   "dependencies": {
-    "axios": "^1.7.3",
-    "vue": "^3.2.4"
+    "axios": "^1.7.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
