--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@iankibetsh/vue-streamline",
-  "version": "1.0.6",
+  "version": "1.1.5",
   "description": "Vue library for streamlining laravel backend services with @iankibet/streamline composer package",
-  "type": "module",
+ "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "main": "dist/vue-streamline.es.js",
-  "module": "dist/vue-streamline.umd.js",
+  "exports": {
+    ".": "./src/index.js"
+  },
   "keywords": [],
   "author": "Iankibet",
   "license": "ISC",
