--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "@iankibetsh/vue-streamline",
-  "version": "1.2.3",
-  "description": "Vue library for streamlining laravel backend services with @iankibet/streamline composer package",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "exports": {
-    ".": "./src/index.js"
-  },
-  "keywords": [],
-  "author": "Iankibet",
-  "license": "ISC",
-  "dependencies": {
-    "@iankibetsh/shframework": "^5",
-    "vue": "^3.2.4"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
-}
+      "name": "@iankibetsh/vue-streamline",
+      "version": "1.2.3",
+      "description": "Vue library for streamlining laravel backend services with @iankibet/streamline composer package",
+      "type": "module",
+      "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+      },
+      "exports": {
+        ".": "./src/index.js"
+      },
+      "keywords": [],
+      "author": "Iankibet",
+      "license": "ISC",
+      "devDependencies": {
+        "@vitejs/plugin-vue": "^5.1.2",
+        "vite": "^5.4.1"
+      },
+      "peerDependencies": {
+        "@iankibetsh/shframework": "^5",
+        "vue": "^3"
+      },
+      "publishConfig": {
+        "access": "public"
+      }
+    }
